syntax = "proto3";
package Networking.Envelopes;

import "Networking/Requests/Request.proto";
import "Networking/Envelopes/AuthTicket.proto";
import "Networking/Envelopes/Unknown6.proto";

message RequestEnvelope {
	int32 status_code = 1;

	//Also called RPC_ID in Rocket-API
	uint64 request_id = 3;
	repeated .Networking.Requests.Request requests = 4;

	.Networking.Envelopes.Unknown6 unknown6 = 6;
	double latitude = 7;
	double longitude = 8;
	double altitude = 9;
	AuthInfo auth_info = 10;
	.Networking.Envelopes.AuthTicket auth_ticket = 11;
	int64 unknown12 = 12;

	message AuthInfo {
		string provider = 1;
		JWT token = 2;

		message JWT {
			string contents = 1;
			int32 unknown2  = 2;
		}
	}
}
